log
Sun Apr 10 20:57:09 HSP 2022: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     new->buckets = (Pair *) calloc(capacity, sizeof(Pair));
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
28611ca
Sun Apr 10 20:58:21 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0222ab9
Sun Apr 10 20:58:38 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1b0f043
Sun Apr 10 21:08:43 HSP 2022: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
fb64880
Sun Apr 10 21:10:36 HSP 2022: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|0
127fe0e
Sun Apr 10 21:15:01 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
4ed443f
Sun Apr 10 21:15:32 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
37a6f1d
Sun Apr 10 21:15:50 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ab282e5
Sun Apr 10 21:16:08 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
256989f
Sun Apr 10 21:20:00 HSP 2022: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
56b13e2
Sun Apr 10 21:20:31 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
580f322
Sun Apr 10 21:21:09 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
b2d76ad
Sun Apr 10 21:22:09 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:16: error: used struct type value where scalar is required
         while( *(map->buckets)[index] || *(map->buckets)[index]->key)
                ^
Compilation failed
d499021
Sun Apr 10 21:22:36 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
757374a
Sun Apr 10 21:22:53 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bab85aa
Sun Apr 10 21:24:00 HSP 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
dcbc143
Sun Apr 10 21:24:13 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:48: error: '*(buckets + (sizetype)((unsigned int)index * 4u))' is a pointer; did you mean to use '->'?
         while( buckets[index] || buckets[index].key)
                                                ^
                                                ->
Compilation failed
9b7ef29
Sun Apr 10 21:24:42 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3bf33f3
Sun Apr 10 21:24:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
fbbf52e
Sun Apr 10 21:25:19 HSP 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
f777c28
Sun Apr 10 21:26:19 HSP 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|5
total_score: 20/70
8ef6ea3
Sun Apr 10 21:32:20 HSP 2022: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|5
total_score: 20/70
9ac4a7a
Sun Apr 10 21:33:43 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
26f72c8
Sun Apr 10 21:44:37 HSP 2022: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:83:11: error: unused variable 'par' [-Werror=unused-variable]
     Pair *par;
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
f92dcd6
Sun Apr 10 21:44:49 HSP 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 30/70
499fff8
Sun Apr 10 21:45:54 HSP 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
7d95302
